--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,9 +11,9 @@ jobs:
         with:
           python-version: 3.10
       - name: Configure GCP Credentials
-        uses: 'google-github-actions/auth@v2'
+        uses: "google-github-actions/auth@v2"
         with:
-          credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
+          credentials_json: "${{ secrets.GOOGLE_CREDENTIALS }}"
       - run: pip install -r requirements.txt
       - uses: pulumi/actions@v3
         with:
