Add storage & set iam to compute sa for storage

--- a/Pulumi.dev.yaml
+++ b/Pulumi.dev.yaml
@@ -1,5 +1,6 @@
 config:
   cells-mvp:nodesPerZone: "1"
+  cells-mvp:projectNumber: 554378970449
   gcp:project: rock-verbena-424808-r3
   gcp:region: europe-west9
   gcp:zone: europe-west9-a
